--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Upload files to release
         uses: svenstaro/upload-release-action@2.11.2
         with:
-          file: 'build/libs/ic10-assembler.jar'
+          file: 'build/distributions/*'
+          file_glob: true
           make_latest: false
           overwrite: true
