ci(release): assemble shadow dist

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
           cache-disabled: true # Rerun all tasks to ensure a full release build
 
       - name: Build
-        run: ./gradlew clean build -Pversion=${{ steps.version.outputs.full }}
+        run: ./gradlew clean assembleShadowDist -Pversion=${{ steps.version.outputs.full }}
 
       - name: Upload files to release
         uses: svenstaro/upload-release-action@2.11.2
